TODO: "slow" rendering mode for bidi and scripts
TODO: read property sequence is broken with respect to utf-8 etc.
TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif
WISH: just for fun, do shade and tint with XRender.
WISH: support tex fonts

	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect
          will likely be small as 99% of the xft slowness is server-related.
        - perl: much increased functionality, better overlays, popup support
          and much much more.
        - perl: urxvt::line now can set via ->t and ->r.
        - perl: changed interpretation of --perl-ext-common and -pe.
        - perl: finally implemented --perl-eval.
        - perl: non-blocking anyevent support.
        - perl: run tainted and ignore perl-eval/perl-lib if started
          setuid/setgid.
        - free the resource database: this plugs a massive memory leak. As a
          side effect, it also gets rid of XGetDefault calls.
        - free one of the cursors, fixes a small memory leak.
        - built-in (as opposed to terminfos) visual bell was broken/too fast.

6.3  Wed Jan  4 22:37:10 CET 2006
        - SECURITY FIX: on systems using openpty, permissions were
          not correctly updated on the tty device and were left as
          world-readable and world-writable (likely in original rxvt,
          too), and were not restored properly. Affected are only
          systems where non-unix ptys were used (such as most BSDs, not
          GNU/Linux). (found, patched and debugged by Ryan Beasley).
        - meta8 support was forcefully enabled in most configurations.
          restored configurability of this (useless) feature (reported